Optimizar rendimiento del sitio web movil basado en informe Lighthouse
- Agregar preconnect hints para origenes criticos (i.imgur.com, spainrp-web.onrender.com, fonts.googleapis.com)
- Implementar lazy loading para componentes no inmediatamente visibles
- Agregar lazy loading y decoding async para imagenes de avatares
- Optimizar CSS con animaciones reducidas para mejor rendimiento
- Mejorar contraste de colores en botones Discord para accesibilidad
- Implementar Content Security Policy (CSP) para seguridad
- Optimizar configuracion de Vite con tree shaking agresivo
- Reducir chunk size warning limit y optimizar manual chunks
- Agregar optimizaciones de Terser para eliminar console.log en produccion
- Implementar Suspense para lazy loading de componentes
- Mejorar scrollbar styling y animaciones de rendimiento

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,16 @@
   <link rel="icon" type="image/png" href="/src/assets/spainrplogo.png" />
   <link rel="preload" as="image" href="/src/assets/spainrplogo.png" imagesizes="40px" fetchpriority="high" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Preconnect hints for critical origins -->
+  <link rel="preconnect" href="https://i.imgur.com" crossorigin>
+  <link rel="preconnect" href="https://spainrp-web.onrender.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- DNS prefetch for other origins -->
+  <link rel="dns-prefetch" href="https://tr.rbxcdn.com">
+  <link rel="dns-prefetch" href="https://discord.com">
   <title>SpainRP Web | Roleplay España</title>
   <meta name="description" content="SpainRP Web: Panel, economía, noticias, bandas, policía y apps para el mejor servidor de roleplay español. Conecta Discord, Roblox y más." />
   <meta name="keywords" content="SpainRP, roleplay, España, Discord, Roblox, economía, bandas, policía, noticias, panel, servidor, GTA, FiveM, RP" />
