Add Google Search Console verification meta tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,11 @@
   <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/src/assets/spainrplogo.png" />
-  <link rel="preload" as="image" href="/src/assets/spainrplogo.png" imagesizes="40px" fetchpriority="high" />
+  <link rel="preload" as="image" href="/src/assets/spainrplogo.png" fetchpriority="high" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="WbN-SQFORaNTRbQPTHDFL5FxEmw6H4GCAmImFU2PbCg" />
   
   <!-- Preconnect hints for critical origins -->
   <link rel="preconnect" href="https://i.imgur.com" crossorigin>
