Implement comprehensive SEO optimization for better Google ranking
- Optimize meta tags with targeted keywords (spainrp, spainrp web, spainrp discord)
- Add structured data (JSON-LD) for better search engine understanding
- Create sitemap.xml for better indexing
- Add robots.txt to guide crawlers
- Enhance Open Graph and Twitter Card tags
- Add canonical URLs and SEO-friendly meta descriptions
- Target keywords: spainrp, spainrp web, spainrp discord, spainrp roblox, roleplay espaÃ±a

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,14 +18,62 @@
   <!-- DNS prefetch for other origins -->
   <link rel="dns-prefetch" href="https://tr.rbxcdn.com">
   <link rel="dns-prefetch" href="https://discord.com">
-  <title>SpainRP Web | Roleplay España</title>
-  <meta name="description" content="SpainRP Web: Panel, economía, noticias, bandas, policía y apps para el mejor servidor de roleplay español. Conecta Discord, Roblox y más." />
-  <meta name="keywords" content="SpainRP, roleplay, España, Discord, Roblox, economía, bandas, policía, noticias, panel, servidor, GTA, FiveM, RP" />
-  <meta property="og:title" content="SpainRP Web | Roleplay España" />
-  <meta property="og:description" content="Panel, economía, noticias, bandas, policía y apps para el mejor servidor de roleplay español. Conecta Discord, Roblox y más." />
-  <meta property="og:image" content="/src/assets/spainrplogo.png" />
-  <meta property="og:url" content="https://spainrp.es/" />
+  <title>SpainRP Web - Servidor de Roleplay España | Discord, Roblox, Panel</title>
+  <meta name="description" content="SpainRP Web: El mejor servidor de roleplay español. Panel de control, economía virtual, noticias, bandas, policía y apps. Conecta Discord, Roblox, GTA RP. ¡Únete ahora!" />
+  <meta name="keywords" content="spainrp, spainrp web, spainrp discord, spainrp roblox, roleplay españa, servidor roleplay, gta rp, fivem, discord spainrp, panel spainrp, economía virtual, bandas, policía, noticias, apps, spainrp panel, spainrp servidor, roleplay español, spainrp comunidad" />
+  <meta name="author" content="SpainRP Team" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="googlebot" content="index, follow" />
+  <link rel="canonical" href="https://spainrp-oficial.onrender.com/" />
+  
+  <!-- SEO Links -->
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  <meta property="og:title" content="SpainRP Web - Servidor de Roleplay España | Discord, Roblox, Panel" />
+  <meta property="og:description" content="SpainRP Web: El mejor servidor de roleplay español. Panel de control, economía virtual, noticias, bandas, policía y apps. Conecta Discord, Roblox, GTA RP. ¡Únete ahora!" />
+  <meta property="og:image" content="https://spainrp-oficial.onrender.com/assets/spainrplogo-ChLGsJHK.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://spainrp-oficial.onrender.com/" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="SpainRP Web" />
+  <meta property="og:locale" content="es_ES" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SpainRP Web - Servidor de Roleplay España" />
+  <meta name="twitter:description" content="El mejor servidor de roleplay español. Panel, economía, noticias, bandas, policía y apps." />
+  <meta name="twitter:image" content="https://spainrp-oficial.onrender.com/assets/spainrplogo-ChLGsJHK.png" />
+  
+  <!-- Datos Estructurados JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "SpainRP Web",
+    "alternateName": "SpainRP",
+    "url": "https://spainrp-oficial.onrender.com/",
+    "description": "El mejor servidor de roleplay español. Panel de control, economía virtual, noticias, bandas, policía y apps.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "SpainRP Team",
+      "url": "https://spainrp-oficial.onrender.com/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://spainrp-oficial.onrender.com/assets/spainrplogo-ChLGsJHK.png"
+      }
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://spainrp-oficial.onrender.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "sameAs": [
+      "https://discord.gg/spainrp",
+      "https://discord.gg/sMzFgFQHXA"
+    ],
+    "keywords": "spainrp, spainrp web, spainrp discord, spainrp roblox, roleplay españa, servidor roleplay, gta rp, fivem, discord spainrp, panel spainrp, economía virtual, bandas, policía, noticias, apps"
+  }
+  </script>
   </head>
   <body>
     <div id="root"></div>
