feat: Add Google Analytics tracking (G-9HMH09M0NP)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,16 @@
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="WbN-SQFORaNTRbQPTHDFL5FxEmw6H4GCAmImFU2PbCg" />
   
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9HMH09M0NP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9HMH09M0NP');
+  </script>
+  
   <!-- Preconnect hints for critical origins -->
   <link rel="preconnect" href="https://i.imgur.com" crossorigin>
   <link rel="preconnect" href="https://spainrp-web.onrender.com" crossorigin>
