Corregir contrastes en todos los filtros, inputs y selects de la aplicaciÃ³n
- MDT Policial: Mejorar contrastes en inputs, selects y textareas
- StockMarket: Corregir contraste en input de cantidad
- SimuladorTienda: Mejorar contraste en input de ID de sala
- News: Corregir contrastes en inputs de bÃºsqueda y comentarios
- BlackMarket: Mejorar contrastes en inputs de saldo
- MinijuegosRP: Corregir contraste en input de ID de sala
- Panel1: Mejorar contrastes en inputs de anuncios y encuestas

Todos los inputs ahora tienen:
- Fondo oscuro (#1a1a1a)
- Texto blanco (#ffffff)
- Bordes visibles (#4b5563)
- Mejor contraste y legibilidad

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
   <!-- SEO Links -->
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <meta property="og:title" content="SpainRP Web - Servidor de Roleplay España | Discord, Roblox, Panel" />
-  <meta property="og:description" content="SpainRP Web: El mejor servidor de roleplay español. Panel de control, economía virtual, noticias, bandas, policía y apps. Conecta Discord, Roblox, GTA RP. ¡Únete ahora!" />
+  <meta property="og:description" content="SpainRP Web: El mejor servidor de roleplay español. Panel de control, economía virtual conectada con discord, noticias, bandas, policía y apps. Conecta tu cuenta de Discord y Roblox. ¡Únete ahora!" />
   <meta property="og:image" content="https://spainrp-oficial.onrender.com/assets/spainrplogo-ChLGsJHK.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
