--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
   
   <!-- Preconnect hints for critical origins -->
   <link rel="preconnect" href="https://i.imgur.com" crossorigin>
-  <link rel="preconnect" href="https://spainrp-web.onrender.com" crossorigin>
+  <link rel="preconnect" href="https://spainrp-oficial.onrender.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
